@@ -1,6 +1,6 @@
 {
   "name": "simp-simp_gitlab",
-  "version": "0.9.0",
+  "version": "0.10.0",
   "author": "SIMP Team",
   "summary": "SIMP profiles for GitLab",
   "license": "Apache-2.0",
@@ -17,7 +17,7 @@
   "dependencies": [
     {
       "name": "puppet/chrony",
-      "version_requirement": ">= 1.0.0 < 3.0.0"
+      "version_requirement": ">= 1.0.0 < 4.0.0"
     },
     {
       "name": "puppet/augeasproviders_ssh",
@@ -37,7 +37,7 @@
     },
     {
       "name": "simp/pam",
-      "version_requirement": ">= 6.8.2 < 7.0.0"
+      "version_requirement": ">= 6.8.3 < 7.0.0"
     },
     {
       "name": "simp/pki",
@@ -49,7 +49,7 @@
     },
     {
       "name": "simp/simplib",
-      "version_requirement": ">= 4.6.0 < 5.0.0"
+      "version_requirement": ">= 4.9.0 < 5.0.0"
     },
     {
       "name": "simp/ssh",
@@ -98,7 +98,7 @@
   "requirements": [
     {
       "name": "puppet",
-      "version_requirement": ">= 6.22.1 < 8.0.0"
+      "version_requirement": ">= 7.0.0 < 9.0.0"
     }
   ]
 }
